# Backend_with_Python

./: README.md
02_CRUD_sqlalchemy_1table/: crud_risc.py  enterprise.db  modular_crud.py  pyproject.toml
05_Library_database/: Makefile  inserts.py  main.py  pyproject.toml  test.py
05_Library_database/app/: __init__.py
05_Library_database/app/consults/: __init__.py  db_consults.py
05_Library_database/app/crud/: __init__.py
05_Library_database/app/header/: __init__.py  headers.py
05_Library_database/app/static/: deletion.py  queries.py  queries_publisher.py
05_Library_database/app/tables/: __init__.py  author.py  base.py  book.py  category.py  publisher.py
05_Library_database/db/: lib.db
06_Library_FastAPI/: Makefile  app.py  pyproject.toml  readME.md  test.py
06_Library_FastAPI/config/: __init__.py  base.py  db.py
06_Library_FastAPI/db/: library.db
06_Library_FastAPI/models/: __init__.py  author.py  book.py  category.py  category_books.py
06_Library_FastAPI/routes/: __init__.py  authorapi.py  bookapi.py  categoryapi.py  categorybooksapi.py
06_Library_FastAPI/schemas/: __init__.py  author.py  auxiliar_schemas.py  book.py  category.py  category_books.py
06_Library_FastAPI/utils/: __init__.py  create_db.py
07_business_ver1.0/: .env  alembic.ini  annotations.md  main.py  makefile  pyproject.toml  todo.md
07_business_ver1.0/alembic/: env.py
07_business_ver1.0/alembic/versions/: 415aecff6983_change_user_column_name.py
07_business_ver1.0/app/: __init__.py
07_business_ver1.0/app/api/: __init__.py  api.py
07_business_ver1.0/app/auth/: __init__.py  password_hash.py
07_business_ver1.0/app/core/: config.py
07_business_ver1.0/app/database/: __init__.py  create_tables.py  drop_database.py
07_business_ver1.0/app/db/: __init__.py  base_class.py  session.py
07_business_ver1.0/app/models/: Users_model.py  (+4 more)
(+41 files in other folders)
