[tool.poetry]
name = "crud_alchemy"
version = "0.1.0"
description = ""
authors = ["Ana Atala"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.26"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
