[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["Ana Atala"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.27"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
