[tool.poetry]
name = "Library_Fastapi"
version = "0.1.0"
description = ""
authors = ["maiaatala <ana.atala@unemat.br>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.31"
fastapi = "^0.73.0"
uvicorn = "^0.17.1"
SQLAlchemy-Utils = "^0.38.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
icecream = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
