[tool.poetry]
name = "business_ver1.0"
version = "0.1.0"
description = "try1 at business app"
authors = ["maiaatala <ana.atala@unemat.br>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.28"
uvicorn = "^0.16.0"
fastapi = "^0.70.1"
SQLAlchemy-Utils = "^0.37.9"
python-dotenv = "^0.19.2"
psycopg2 = "^2.9.3"
pydantic = "^1.9.0"
email-validator = "^1.1.3"
passlib = "^1.7.4"
alembic = "^1.7.6"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
icecream = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
